# enrustiate

./: .gitignore  Cargo.toml  README.md  makefile
benches/: benchmark.rs
fizz_buzz/src/: lib.rs
number_renderer/: Cargo.toml
number_renderer/src/: lib.rs  numbers_to_words.rs
numbers_to_words/: Cargo.toml
numbers_to_words/src/: lib.rs  numbers_to_words.rs
polynomial/: Cargo.toml
polynomial/src/: main.rs
polynomial/src/solver/: mod.rs  parser.rs  polynomial.rs  solver.rs
src/: main.rs  numbers_to_words.rs  validation_errors.rs  validator.rs
tone_gen/: Cargo.toml  README.md
tone_gen/src/: lib.rs
wall_spacer/: Cargo.toml
wall_spacer/src/: lib.rs
