[package]
name = "polynomial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
regex = "1.7.3"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
